--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,25 +1,25 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-*{
-  padding: 0px;
-  margin: 0px;
-  box-sizing: border-box;
-}
-body{
-  @apply bg-sky-200;
-}
-/* ....................................navstyle..................... */
-.head-container{
-  @apply flex justify-between items-center max-w-7xl mx-auto py-5 px-[8%] w-full flex-wrap 
-}
-.head-title{
-    @apply flex text-2xl lg:text-4xl font-bold hover:text-red-700 items-center cursor-pointer text-black
+  *{
+    padding: 0px;
+    margin: 0px;
+    box-sizing: border-box;
   }
+  body{
+    @apply bg-sky-200;
+  }
+/* ....................................navstyle..................... */
+  .head-container{
+    @apply flex justify-between items-center max-w-7xl mx-auto py-5 px-[8%] w-full flex-wrap 
+  }
+  .head-title{
+      @apply flex text-lg lg:text-4xl font-bold hover:text-red-700 items-center cursor-pointer text-black
+    }
   .nav-space{
     margin-right: 10px;
     list-style: none;
-    @apply font-bold hover:text-red-700 mt-10 lg:mt-0;
+    @apply font-bold hover:text-red-700 mt-10 lg:mt-0 bg-white p-2 rounded-2xl w-1/2 lg:w-full;
   }
   .link{
     text-decoration: none;
@@ -99,21 +99,16 @@ body{
     background-color:powderblue;
   }
   .template-title1,.year{
-    color: black;
-    font-size:bold;
+    @apply font-bold text-lg 
   }
-  .img{
-    height: 200px;
-    width:100%;
-    margin-bottom: 20px ;
-  }
+  
   .small{
     display:flex;
     justify-content:space-between;
     align-items:center;
   }
   .template-title1:hover{
-    color:red;
+    @apply text-red-700
   }
     .btn-container{
     display:flex;
