Movie app application

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,9 +7,13 @@
     box-sizing: border-box;
   }
   body{
-    @apply bg-sky-200;
+    background-color: #F1F5F8;
   }
 /* ....................................navstyle..................... */
+  .header{
+    background-color: #F1F5F8;
+    @apply shadow-2xl
+  }
   .head-container{
     @apply flex justify-between items-center max-w-7xl mx-auto py-5 px-[8%] w-full flex-wrap 
   }
@@ -19,7 +23,7 @@
   .nav-space{
     margin-right: 10px;
     list-style: none;
-    @apply font-bold hover:text-red-700 mt-10 lg:mt-0 bg-white p-2 rounded-2xl w-1/2 lg:w-full;
+    @apply font-bold hover:text-red-700 mt-10 lg:mt-0 bg-white p-2 rounded-2xl w-1/2 lg:w-full shadow-2xl border border-black;
   }
   .link{
     text-decoration: none;
@@ -96,7 +100,7 @@
     background-color: #fff;
   }
   .template-container:hover{
-    background-color:powderblue;
+    @apply bg-sky-100;
   }
   .template-title1,.year{
     @apply font-bold text-lg 
@@ -139,11 +143,10 @@
       color:red
     }
     .create-container{
-      margin-top:70px;
       margin-left: auto;
       margin-right: auto;
       max-width: 40rem;
-      margin-bottom: 30px;
+      @apply p-5 ;
       
     }
     .create-title{
@@ -162,6 +165,7 @@
       margin-bottom: 10px;
       border: none;
       outline: none;
+      overflow: hidden;
     }
     .create-textarea{
       padding:10px;
@@ -201,7 +205,7 @@
     display:flex;
     justify-content:flex-end;
     align-items: center;
-    margin-bottom:30px;
+    padding-bottom:30px;
     margin-right: 20px;
   }
   .top-arrow{
@@ -229,6 +233,9 @@
   }
   .create-container{
     margin:70px 10px;
+  }
+  .btn-create{
+    font-size:12px;
   }
   .RRform{
     font-size: 18px;
