--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -102,6 +102,7 @@
   .template-container:hover{
     @apply bg-sky-100;
   }
+
   .template-title1,.year{
     @apply font-bold text-lg 
   }
@@ -126,6 +127,12 @@
     border: none;
     margin-top: 20px ;
   } 
+
+  /* ...................animation....................... */
+  .slide-in-elliptic-top-fwd{animation:slide-in-elliptic-top-fwd .7s cubic-bezier(.25,.46,.45,.94) both}
+  @keyframes slide-in-elliptic-top-fwd{0%{transform:translateY(-600px) rotateX(-30deg) scale(0);transform-origin:50% 100%;opacity:0}100%{transform:translateY(0) rotateX(0) scale(1);transform-origin:50% 1400px;opacity:1}}
+  .focus-in-contract{animation:focus-in-contract .7s cubic-bezier(.25,.46,.45,.94) both}
+  @keyframes focus-in-contract{0%{letter-spacing:1em;filter:blur(12px);opacity:0}100%{filter:blur(0);opacity:1}}
   /* ........................................details.............................. */
   .details-title{
     @apply lg:text-lg font-bold hover:text-red-700
