--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -35,7 +35,7 @@
     background-repeat:no-repeat;
     background-position: center;
     background-size: cover;
-    height:480px;
+    height:450px;
     width:100%;
     box-shadow:2px 2px 2px 2px #fff;
     display:flex;
@@ -98,6 +98,7 @@
     box-shadow:2px 2px 2px 2px black;
     padding:10px;
     background-color: #fff;
+
   }
   .template-container:hover{
     @apply bg-sky-100;
@@ -218,6 +219,7 @@
   .top-arrow{
     width:100%;
     height:100%;
+    
   }
   /* ................................................responsiveness.............................. */
 
@@ -249,5 +251,9 @@
   }
   .create-title{
     font-size: 12px;
+  }
+  .hero{
+    height:200px;
+    margin-bottom: 20px;
   }
 }
